--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,3 +34,5 @@ jobs:
         run: |
           echo Add other actions to build,
           uname -a
+          cat /proc/cpuinfo
+          free -m
